--- a/DSA/.vscode/settings.json
+++ b/DSA/.vscode/settings.json
@@ -44,6 +44,7 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "xhash": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "list": "cpp"
     }
 }
