--- a/Basics/.vscode/settings.json
+++ b/Basics/.vscode/settings.json
@@ -47,5 +47,6 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "unordered_map": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
