--- a/DSA/.vscode/settings.json
+++ b/DSA/.vscode/settings.json
@@ -45,6 +45,7 @@
         "xutility": "cpp",
         "xhash": "cpp",
         "unordered_set": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "stack": "cpp"
     }
 }
