--- a/DSA/.vscode/settings.json
+++ b/DSA/.vscode/settings.json
@@ -49,6 +49,8 @@
         "stack": "cpp",
         "deque": "cpp",
         "ranges": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "queue": "cpp",
+        "algorithm": "cpp"
     }
 }
