Added MaxHeap and MinHeap

--- a/DSA/.vscode/settings.json
+++ b/DSA/.vscode/settings.json
@@ -53,6 +53,7 @@
         "queue": "cpp",
         "algorithm": "cpp",
         "map": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "set": "cpp"
     }
 }
