--- a/DSA/.vscode/settings.json
+++ b/DSA/.vscode/settings.json
@@ -56,6 +56,7 @@
         "xtree": "cpp",
         "set": "cpp",
         "string": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "functional": "cpp"
     }
 }
